syntax = "proto3";

import "google/protobuf/timestamp.proto";

service PaperbackLogger {
    rpc streamLogs(LogFilter) returns (stream LogLine) {}
}

message LogLine {
    enum LogLevel {
        INFO = 0;
        WARN = 1;
        ERROR = 2;
    }
    LogLevel level = 1;
    repeated string tags = 2;
    string message = 3;
    google.protobuf.Timestamp date = 4;
}

message LogFilter {}